--- a/accounts/templates/accounts/registration/signup.html
+++ b/accounts/templates/accounts/registration/signup.html
@@ -22,7 +22,7 @@
                         <div class="mb-2" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ field.help_text }}">
                             {{ field }}
                             {% if field.errors %}
-                                <span class="text-danger">{{ field.errors }}</span>
+                                <span class="text-danger small">{{ field.errors }}</span>
                             {% endif %}
                         </div>
                     </div>
