--- a/scd/templates/DM/gestionDM.html
+++ b/scd/templates/DM/gestionDM.html
@@ -1,4 +1,4 @@
-{% extends ".\base.html" %}
+{% extends "base.html" %}
 
 {% block title %}Materias de Docentes{% endblock %}
 
@@ -9,6 +9,9 @@
 {% block scripts %}
     <script src="{% static 'js/general.js' %}"></script>
     <script src="{% static 'js/eliminar.js' %}"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="{% static 'js/filtroDM.js' %}"></script>
+    
 {% endblock %}
 
 {% block body %}
@@ -76,16 +79,20 @@
     </div>
     <div class="table-responsive"> <!--COMIENZO TABLA-->
         <div class="scroll-box">
-            <table class="table table-striped">
+            <table class="table table-striped" id="tabla-docmat-registros">
                 <thead>
                      <tr>
                         <th class="col txt-datos">#</th>
                         <th class="col txt-datos" hidden>ID Asociación</th>
                         <th class="col txt-datos" hidden>ID Docente</th>
-                        <th class="col txt-datos">Docente</th>
+                        <th class="col txt-datos">Docente
+                        </br><input type="text" id="cuadro-busqueda-docmat-nombre" class="form-control" placeholder="Buscar por docente">
+                        </th>
                         <th class="col-1 txt-datos">CUIL</th>
                         <th class="col txt-datos" hidden>ID Materia</th>
-                        <th class="col txt-datos">Materia</th>
+                        <th class="col txt-datos">Materia
+                        </br><input type="text" id="cuadro-busqueda-docmat-materia" class="form-control" placeholder="Buscar por materia">
+                        </th>
                         {% if user|has_group:"Administrador" or user|has_group:"Preceptor" %}
                         <th class="col-1 txt-datos">Opciones</th>
                         {% endif %}
