--- a/scd/templates/Materia/gestionMateria.html
+++ b/scd/templates/Materia/gestionMateria.html
@@ -59,7 +59,7 @@
     </div>
     <div class="table-responsive"> <!--COMIENZO TABLA-->
         <div class="scroll-box">
-            <table class="table table-striped">
+            <table class="table table-striped" id="tabla-registros">
                 <thead>
                      <tr>
                         <th class="col-1 txt-datos">#</th>
